# UAV-FL

./: .gitignore  README.md  convert_to_yolo.py  create_class_mapping.py  pyproject.toml  run_simulation.py
pytorchexample/: client_app.py  server_app.py  task.py  yolo_model.py
