[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorchexample"
version = "1.0.0"
description = "Federated Learning for UAV-Swarm Object Detection"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.14.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pillow>=10.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "uav-swarm-research"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
local-epochs = 1
batch-size = 8
learning-rate = 0.001
num-clients = 3
client-resources.num_cpus = 1
client-resources.num_gpus = 0.0